Change homepage background

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body, html {
   }
   
   .bg {
+    background-image: url("https://www.psdgraphics.com/wp-content/uploads/2009/09/abstract-design.jpg");
 
-    background-image: url("https://wallpaperaccess.com/full/58366.jpg");
   
 
     height: 94%; 
